--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
       "tech"
     ],
     "website": "https//telegram.dog/Midukki_RoBoT",
-    "repository": "https://github.com/PR0FESS0R-99/Midukki-RoBoT",
+    "repository": "https://github.com/Kingmaker003/Robot",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
